// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton Container Accepts containerProps 1`] = `
<div
  className="radio-button I get added to default classes"
  id="div-id"
  onClick={[Function]}
  onKeyUp={[Function]}
>
  <input
    className="radio-input"
    id=""
    onChange={[Function]}
    onClick={[Function]}
    type="radio"
    value=""
  />
</div>
`;

exports[`RadioButton Default 1`] = `
<div
  className="radio-button"
  onClick={[Function]}
>
  <input
    className="radio-input"
    id=""
    onChange={[Function]}
    onClick={[Function]}
    type="radio"
    value=""
  />
</div>
`;

exports[`RadioButton Input Accepts props passed directly to component 1`] = `
.c0 {
  color: #222;
  font-weight: bold;
  margin-bottom: 3px;
}

<div
  className="radio-button"
  onClick={[Function]}
>
  <input
    className="radio-input add me"
    data-item={
      Array [
        "array",
        1,
      ]
    }
    id="my-id"
    onChange={[Function]}
    onClick={[Function]}
    type="radio"
    value="I am the value"
  />
  <label
    className="radio-label c0"
    htmlFor="my-id"
  >
    I am the value
  </label>
</div>
`;
